--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter you JavaScript notes here</li>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          
+          <li>Math.floor() and Math.random() are both properties of JavaScript's built-in Math object that can be used together to generate a random number. </li>
         </ul>
       </section>
       
